<resources>
    <string name="app_name">AngAppKotlin</string>
    <string name="create_account">Create account</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="authentication">Authentication</string>
    <string name="create_new_account">Create new account</string>
    <string name="full_name">Full name</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
    <string name="already_registered_login_here">Already registered, login here</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_test">test</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="share">Share</string>
    <string name="search">Search</string>
    <string name="mode">Mode</string>
    <string name="vocabulary">Vocabulary</string>
    <string name="shared_collections">Shared Collections</string>
    <string name="controls">Controls</string>
    <string name="add_word">Add Word</string>
    <string name="word_to_add">Word to add</string>
    <string name="note">Note</string>
    <string name="not_necessary">Not necessary</string>
    <string name="translation">Translation</string>
    <string name="add">Add</string>
    <string name="back_to_collections">Back to Collections</string>
    <string name="collection_name">Collection Name</string>
    <string name="you">You</string>
    <string name="share_collection">Share Collection</string>
    <string name="change_your_password">Change Your Password</string>
    <string name="go_back_to_profile">Go Back to Profile</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New password:</string>
    <string name="confirm_new_password">Confirm new password:</string>
    <string name="save_password">Save password</string>
    <string name="title">Title</string>
    <string name="description">Description</string>

</resources>