<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/voctoplayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="-65dp"
    tools:context=".ui.VocabularyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.225"
        android:background="@drawable/bg_top"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/main_name"
                style="@style/TextName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/add_word" />

        </RelativeLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/framelay"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:layout_marginStart="80dp"
        android:layout_marginTop="-25dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/button_rounded">

        <ImageView
            android:id="@+id/back"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="7dp"
            android:background="@drawable/bg_circle"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            style="@style/TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingLeft="40dp"
            android:text="@string/back_to_collections" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:layout_weight="0.6"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_baseline_collections_24" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/word_to_add" />

                <EditText
                    android:layout_marginStart="15dp"
                    android:id="@+id/word_name"
                    style="@style/TextDescription"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:paddingEnd="20dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_english" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/translation" />

                <EditText
                    android:id="@+id/word_translation"
                    style="@style/TextDescription"
                    android:layout_marginStart="15dp"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:paddingEnd="20dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_outline_description_24" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/note" />

                <EditText
                    android:id="@+id/word_description"
                    android:layout_marginStart="15dp"
                    style="@style/TextDescription"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/not_necessary"
                    android:paddingEnd="20dp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/adddoc"
            style="@style/TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="95dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="95dp"
            android:background="@drawable/button_rounded"
            android:text="@string/add"
            android:textAllCaps="false" />
    </LinearLayout>

</LinearLayout>