<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical"
    android:layout_marginTop="-50dp"
    tools:context=".ui.ChangePasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:background="@drawable/bg_top"
        android:layout_weight="0.45">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_your_password"
            android:layout_gravity="center"
            style="@style/TextName"
            android:layout_marginTop="50dp" />

        <ImageView
            android:layout_width="118dp"
            android:layout_height="108dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_baseline_lock_24" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/framepassword"
        android:layout_marginStart="80dp"
        android:layout_marginTop="-25dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/button_rounded">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="7dp"
            android:background="@drawable/bg_circle"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            style="@style/TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/go_back_to_profile" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="0.27"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:layout_height="70dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/TextDescription"
                android:layout_marginStart="40dp"
                android:text="@string/current_password" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_marginEnd="30dp"
                android:id="@+id/tlay1"
                android:layout_weight="0.6"
                android:layout_height="match_parent"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/currpass"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:layout_height="42dp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                style="@style/TextDescription"
                android:layout_marginStart="40dp"
                android:text="@string/new_password" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_marginEnd="30dp"
                android:id="@+id/tlay2"
                app:errorEnabled="true"
                android:layout_weight="0.6"
                android:layout_height="match_parent"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/newpass"
                    android:inputType="textPassword"
                    android:layout_height="42dp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/TextDescription"
                android:layout_marginStart="40dp"
                android:text="@string/confirm_new_password" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_marginEnd="30dp"
                android:id="@+id/tlay3"
                android:layout_weight="0.6"
                android:layout_height="match_parent"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/confirmpass"
                    android:inputType="textPassword"
                    android:layout_height="42dp" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/savepassword"
            style="@style/TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="65dp"
            android:background="@drawable/button_rounded"
            android:text="@string/save_password"
            android:textAllCaps="false" />
    </LinearLayout>
</LinearLayout>